--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory game</title>
+    <title>Color flipper</title>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,16 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Inter:wght@300;400;600;700&family=Karla:wght@700&family=Montserrat:wght@400;500;700&family=Oswald&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,600&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="src/style.css" />
+    <script type="module" src="/src/main.js" defer></script>
   </head>
   <body>
-    <h1>Memory game</h1>
+    <h1>Color flipper <span id="points">0/8</span></h1>
     <div class="game-container"></div>
-
-    <div class="restart-game-container hide">
-      <h1>You won!</h1>
-      <button>Restart!</button>
-    </div>
   </body>
 </html>
