main.js link fix attempt-2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <script type="module" src="main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
   </head>
   <body>
     <h1>Color flipper <span id="points">0/8</span></h1>
